<resources>
    <string name="app_name">Registration</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="welcome_text">Welcome</string>
    <string name="invalid_error_popup_header">Check Your Fields</string>
    <string name="required_fields_message">Please double check the form for any fields you left blank.</string>
    <string name="invalid_email">Please enter a valid Email</string>
    <string name="password_error">1.Password contains minimum 6 letters \n 2.One uppercase characters \n 3.One lowercase characters \n 4.One numeric characters \n 5.one special character</string>
    <string name="invalid_contact_number">Please enter a valid contact number</string>
    <string name="email_already_exist">Email already registered</string>
    <string name="email_not_registered">Email not registered in this application, Please sign up with this email.</string>
    <string name="wrong_password">Wrong password. Enter correct password.</string>

</resources>
