<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:weightSum="2">

        <Button
            android:id="@+id/butLogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/butSignUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/but_login_signup_bg_color"
            android:text="@string/sign_up"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/et_text_color"
        android:theme="@style/MyEditTextTheme" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/et_text_color"
        android:theme="@style/MyEditTextTheme" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/et_text_color"
        android:theme="@style/MyEditTextTheme" />

    <EditText
        android:id="@+id/etContactNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/contact_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="@color/et_text_color"
        android:theme="@style/MyEditTextTheme" />

    <Button
        android:id="@+id/butCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_account"
        android:textColor="@color/black" />
</LinearLayout>